# paiml-mcp-agent-toolkit

./: .gitignore  .paiml-display.yaml  .refactorignore  CLAUDE.md  COMMIT_MESSAGE.txt  CONTEXT_GENERATION_RELEASE_NOTES.md  CONTRIBUTING.md  Cargo.toml  DEAD_CODE_REMOVAL_SUMMARY.md  DEPRECATION_NOTICE.md  FAST_COVERAGE_COMPLETE.md  FIX_ALL_LINTS.sh  FIX_HANGING_TESTS.md  GEMINI.md  KAIZEN_FIXES_SUMMARY.md  KAIZEN_LINT_FIX.sh  KAIZEN_OPTIMIZATION_README.md  KAIZEN_QUICK_START.md  LLVM_COVERAGE_STANDARDIZATION.md  Makefile  OPTIMIZATION_SUMMARY.md  OVERNIGHT-REFACTOR-RESULTS.md  OVERNIGHT-REFACTOR-STATUS.md  PUBLISHING_PLAN.md  README.md  REFACTOR-EXECUTION-PLAN.md  REFACTORING_STATUS.md  REFACTOR_AUTO_PRIORITIZATION.md  REFACTOR_AUTO_TEST_MODE.md  REFACTOR_IGNORE_FEATURE.md  RELEASE_NOTES.md  RELEASE_NOTES_SATD_CLEANUP.md  RELEASE_NOTES_v0.22.0.md  RELEASE_NOTES_v0.28.1.md  RELEASE_NOTES_v0.28.4.md  RELEASE_SUMMARY.md  RELEASE_SUMMARY_v0.28.4.md  REMEDIATION_COMPLETE_CHECKLIST.md  SATD_REMEDIATION_STATE.md  SYMBOLIC_AI_RELEASE_NOTES.md  (+72 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dag_builder.rs  fuzz_github_urls.rs  fuzz_makefile_parser.rs  fuzz_mermaid_escaping.rs  fuzz_mermaid_generation.rs  fuzz_mermaid_performance.rs
installer-macro/: Cargo.toml
installer-macro/src/: lib.rs  mir_lowering.rs  shell_ast.rs  shell_emitter.rs  verification.rs
installer-macro/tests/: macro_generation_test.rs  simple_shell_test.rs
server/: .build-info.json  .clippy.toml  .gitignore  Cargo.toml  Dockerfile  Makefile  RELEASE_NOTES_v0.28.2.md  baseline-complexity-sorted.json  baseline-complexity.json  baseline-dag.mmd  baseline-metrics-no-meta.json  baseline-metrics.json  build.rs  clippy.toml  deno.json  full-project-dag.mmd  import-dag.mmd  installer.sh  kaizen-server-optimization.sh  mcp-dead-code-fixed.json  mcp.json  optimization_state.json  outdated-deps.json  post-dag.mmd  post-metrics-no-meta.json  post-metrics.json  server-dag.mmd  services-only-dag.mmd  setup_localstack.sh  test-report.json  test_enum.kt  test_output.md
server/.cargo/: config.toml
server/.pmat-cache/: refactor-state.json
server/artifacts/mermaid/: README.md
server/assets/demo/: app.min.js  style.min.css
server/benches/: critical_path.rs  performance.rs
server/fuzz/fuzz_targets/: fuzz_github_urls.rs
server/proptest-regressions/models/: dag_property_tests.txt
server/proptest-regressions/services/: ast_rust_property_tests.txt  mermaid_property_tests.txt
server/scripts/: docker-setup.ts  test-installation.ts  test-mcp-e2e.ts
server/src/: lib.rs  main.rs  stateless_server.rs
server/src/.refactor_checkpoints/: checkpoint.json
server/src/cli/: analysis_helpers.rs  args.rs  command_dispatcher.rs  command_structure.rs  commands.rs  coverage_helpers.rs  defect_helpers.rs  defect_prediction_helpers.rs  diagnose.rs  diagnose_tests.rs  enums.rs  formatting_helpers.rs  mod.rs  name_similarity_helpers.rs  proof_annotation_formatter.rs  proof_annotation_helpers.rs  proof_annotations_refactored.rs  provability_helpers.rs  regex_patterns.rs  stubs.rs  stubs_refactored.rs  stubs_test.rs  symbol_table_helpers.rs  tdg_helpers.rs
server/src/demo/: assets.rs  config.rs  export.rs  mod.rs  protocol_harness.rs  router.rs  runner.rs  server.rs  server_tests.rs  templates.rs  tests.rs
server/src/handlers/: initialize.rs  mod.rs  prompts.rs  resources.rs  tools.rs  vectorized_tools.rs
server/src/installer/: mod.rs
server/src/mcp_server/: capnp_conversion.rs  handlers.rs  mod.rs  server.rs  snapshots.rs  state_manager.rs
server/src/models/: churn.rs  complexity_bound.rs  dag.rs  dag_property_tests.rs  dead_code.rs  deep_context_config.rs  defect_report.rs  error.rs  mcp.rs  mod.rs  project_meta.rs  refactor.rs  tdg.rs  template.rs  unified_ast.rs
server/src/proptest-regressions/: cli_property_tests.txt
server/src/schema/: refactor_state.capnp
server/src/services/: artifact_writer.rs  artifact_writer_tests.rs  ast_based_dependency_analyzer.rs  ast_based_dependency_analyzer_tests.rs  ast_c.rs  ast_c_dispatch.rs  ast_cpp.rs  ast_cpp_dispatch.rs  ast_kotlin.rs  ast_python.rs  ast_rust.rs  ast_rust_property_tests.rs  ast_rust_unified.rs  ast_strategies.rs  ast_strategies_temp.rs  ast_strategies_tests.rs  ast_typescript.rs  ast_typescript_dispatch.rs  ast_typescript_property_tests.rs  big_o_analyzer.rs  big_o_analyzer_tests.rs  cache.rs  canonical_query.rs  code_intelligence.rs  complexity.rs  complexity_comprehensive_tests.rs  complexity_patterns.rs  complexity_patterns_tests.rs  context.rs  coupling_analyzer.rs  dag_builder.rs  dead_code_analyzer.rs  dead_code_prover.rs  deep_context.rs  deep_context_orchestrator.rs  deep_context_tests.rs  defect_analyzer.rs  defect_analyzers.rs  defect_probability.rs  defect_report_service.rs  (+45 more)
server/src/testing/: analysis_result_matcher.rs  arbitrary.rs  e2e_test_builders.rs  ml_model_fixtures.rs  mod.rs  project_builder.rs  properties.rs  property_tests.rs  simd_validators.rs  vectorized_correctness.rs
server/src/tests/: additional_coverage.rs  analyze_cli_tests.rs  ast_e2e.rs  ast_regression_test.rs  binary_integration.rs  (+48 more)
server/tests/: README.md  ast_dag_mermaid_pipeline.rs  bin_integration.rs  cli_comprehensive_integration.rs  cli_context_tests.rs  cli_documentation_sync.rs  complexity_metrics.rs  config_integration.rs  demo_core_extraction.rs  demo_e2e_integration.rs  demo_integration.rs  demo_web_integration.rs  determinism_tests.rs  documentation_examples.rs  enhanced_dag_integration.rs  execution_mode.rs  export_integration.rs  generate_mermaid_example.rs  generate_mermaid_test.rs  git_clone_validation.rs  high_coverage_integration.rs.skip  installer_security_test.rs  kotlin_ast_test.rs  kotlin_support_test.rs  mcp_documentation_sync.rs  mcp_server_integration.rs  mermaid_artifact_tests.rs  mermaid_empty_bug_fix_test.rs  mermaid_readme_helpers.rs  mermaid_spec_compliance.rs.skip  quality_gate_integration.rs  refactor_auto_property_integration.rs  services_integration.rs  slow_integration.rs  stateless_server_test.rs  test_kotlin_direct.rs  test_kotlin_minimal.rs
(+470 files in other folders)
