[workspace]
members = ["server"]
resolver = "2"

[workspace.package]
version = "0.1.14"
edition = "2021"
authors = ["Pragmatic AI Labs"]
homepage = "https://paiml.com"
repository = "https://github.com/paiml/paiml-mcp-agent-toolkit"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Hosting provider for our installers
install-updater = false