[workspace]
members = ["server"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.28.2"
edition = "2021"
authors = ["Pragmatic AI Labs"]
homepage = "https://paiml.com"
repository = "https://github.com/paiml/paiml-mcp-agent-toolkit"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]

[profile.release]
opt-level = 3            # Maximum performance optimization
lto = "fat"              # Enable Link Time Optimization
codegen-units = 1        # Single codegen unit for maximum optimization
panic = "abort"          # Remove unwinding machinery (~200KB savings)
strip = "symbols"        # Strip symbols (60-80% reduction)
overflow-checks = false  # Disable overflow checks in release

# The profile that 'cargo dist' will build with
# Workspace-level test optimization
[profile.test]
opt-level = 0
lto = false
codegen-units = 256
incremental = true

[profile.test.package."*"]
opt-level = 0

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
