[package]
name = "paiml-mcp-agent-toolkit-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
paiml-mcp-agent-toolkit = { path = "../server" }

[[bin]]
name = "fuzz_mermaid_generation"
path = "fuzz_targets/fuzz_mermaid_generation.rs"
doc = false
test = false

[[bin]]
name = "fuzz_dag_builder"
path = "fuzz_targets/fuzz_dag_builder.rs"
doc = false
test = false

[[bin]]
name = "fuzz_mermaid_performance"
path = "fuzz_targets/fuzz_mermaid_performance.rs"
doc = false
test = false

[[bin]]
name = "fuzz_mermaid_escaping"
path = "fuzz_targets/fuzz_mermaid_escaping.rs"
doc = false
test = false

[[bin]]
name = "fuzz_github_urls"
path = "fuzz_targets/fuzz_github_urls.rs"
doc = false
test = false

[profile.release]
opt-level = 3
debug = true