[package]
name = "installer-macro"
version = "0.2.4"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
blake3 = "1.5"
indexmap = "2.0"

[features]
installer-gen = []

[dev-dependencies]
trybuild = "1.0"