[package]
name = "paiml-mcp-agent-toolkit"
version = "0.17.0"
edition = "2021"
rust-version = "1.80.0"
authors = ["Pragmatic AI Labs"]
description = "MCP server for project scaffolding and template generation"
homepage = "https://paiml.com"
repository = "https://github.com/paiml/paiml-mcp-agent-toolkit"

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "fs", "sync", "signal"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Template engine
handlebars = { version = "6.3", features = ["string_helpers"] }

# Caching
lru = { version = "0.14", features = ["hashbrown"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
sha2 = "0.10"
once_cell = "1.21"
semver = { version = "1.0", features = ["serde"] }
regex = { version = "1.11", features = ["perf"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
uuid = { version = "1.17", features = ["v4", "serde"] }
parking_lot = "0.12"
dirs = "6.0"
roaring = "0.10"
rand = "0.9"
rayon = "1.10"

# Async utilities
futures = "0.3"

# CLI support
clap = { version = "4.5", features = ["derive", "env"] }
num_cpus = "1.17"
serde_yaml = "0.9"
atty = "0.2"

# AST parsing
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.5"
ignore = "0.4"
toml = "0.8"
# For TypeScript/JavaScript parsing
swc_ecma_parser = "14.0"
swc_common = "11.0"
swc_ecma_ast = "11.0"
swc_ecma_visit = "11.0"
# For Python parsing
rustpython-parser = "0.4"

# Installer generation
# installer-macro = { path = "../installer-macro" } # Removed - using simple include_str! instead
blake3 = "1.8"

# Demo/reporting mode dependencies (included by default)
webbrowser = "1.0"
bytes = "1.10"
http = "1.3"
httparse = "1.10"
dashmap = "6.1"
flate2 = "1.1"

# Unified protocol support
axum = { version = "0.8", features = ["json", "original-uri", "tokio", "http1", "http2"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "timeout"] }
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Graph analysis
petgraph = "0.8"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
pretty_assertions = "1.4"
tempfile = "3.20"
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.6"
assert_cmd = "2.0"
predicates = "3.1"

[build-dependencies]
ureq = "3.0"
flate2 = "1.1"

[features]
default = []
# Feature to exclude demo/reporting functionality for minimal builds
no-demo = []

[profile.release]
lto = "fat"
codegen-units = 1
# panic = "abort"  # Disabled to prevent terminal crashes during testing
strip = "symbols"
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "paiml-mcp-agent-toolkit"
path = "src/bin/paiml-mcp-agent-toolkit.rs"

# [[bin]]
# name = "generate-installer"
# path = "src/bin/generate-installer.rs"
# required-features = ["installer-gen"]

[[bench]]
name = "critical_path"
harness = false

